# sandboxed-api

sandboxed_api/: sapi_test.cc
sandboxed_api/bazel/: filewrapper.cc
sandboxed_api/examples/speedtest1/: BUILD.bazel  build.sh  speedtest1-sapi.cc  speedtest1.c
sandboxed_api/examples/speedtest1/lib/: BUILD.bazel  lib.cc  sandbox.h
sandboxed_api/sandbox2/: namespace.cc
